--- a/mobile/package.json
+++ b/mobile/package.json
@@ -13,8 +13,14 @@
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
     "@reduxjs/toolkit": "^1.5.0",
+    "axios": "^0.21.1",
     "expo": "~40.0.0",
+    "expo-constants": "~9.3.3",
+    "expo-network": "~2.4.0",
     "expo-status-bar": "~1.0.3",
+    "formik": "^2.2.6",
+    "intl": "^1.2.5",
+    "luxon": "^1.26.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
@@ -26,13 +32,16 @@
     "react-native-vector-icons": "^8.0.0",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.2",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "yup": "^0.32.8"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
+    "@types/luxon": "^1.25.2",
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
+    "@types/react-redux": "^7.1.16",
     "@types/styled-components-react-native": "^5.1.1",
     "typescript": "~4.0.0"
   },
