--- a/mobile/package.json
+++ b/mobile/package.json
@@ -30,6 +30,7 @@
     "react-native-chart-kit": "^6.11.0",
     "react-native-elements": "^3.1.0",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-paper": "^4.7.2",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
@@ -37,6 +38,7 @@
     "react-native-vector-icons": "^8.0.0",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.2",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.1",
     "yup": "^0.32.8"
   },
